7.4.3. Fixed Arrays.asList() to ListOf()